k8s/certmng/new/ok_namespaces/grafana_pods.yml
apiVersion: v1
kind: Service
metadata:
  name: monitor-svc
  namespace: monitor
spec:
  ports:
    - name: http 
      port: 80
      targetPort: 3000
    - name: https
      port: 443
      targetPort: 3000
  selector:
    app: monitor-pod
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monitor-dep
  namespace: monitor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: monitor-pod
  revisionHistoryLimit: 5
  progressDeadlineSeconds: 300
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: monitor-pod
      namespace: monitor
    spec:
      containers:
        - name: monitor-pod
          image: reg.nms.com.vn/grafana
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
