k8s/certmng/new/ok_namespaces/proxy_nms_pods.yml
apiVersion: v1
kind: Service
metadata:
  name: reverse-proxy-svc
  namespace: reverse-proxy
spec:
  ports:
    - name: http 
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
  selector:
    app: reverse-proxy-pod
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reverse-proxy-dep
  namespace: reverse-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reverse-proxy-pod
  revisionHistoryLimit: 5
  progressDeadlineSeconds: 300
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: reverse-proxy-pod
      namespace: reverse-proxy
    spec:
      containers:
        - name: reverse-proxy-pod
          image: monitorsystemall/public:k8s_nginx
          volumeMounts:
            - name: nix-volume
              mountPath: /etc/nginx
          ports:
            - containerPort: 80
            - containerPort: 443
          resources:
            limits:
              memory: 4096Mi
              cpu: 2
      volumes:
        - name: nix-volume
          nfs:
            server: 192.168.88.118
            path: /etc/ks_data/nginx
