k8s/certmng/new/ok_namespaces/ingress_monitor.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitor-ingress
  namespace: monitor
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
      #nginx.ingress.kubernetes.io/default-backend: "nms"
    
spec:
  rules:
    - host: influxdb.nms.com.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: monitor-svc
                port:
                  number: 443
  tls:
  - hosts:
    - "influxdb.nms.com.vn"
    secretName: monitor-tls
